improve pattern finder

--- a/app/views/books/standard_book.html.erb
+++ b/app/views/books/standard_book.html.erb
@@ -6,6 +6,7 @@
 <body>
    <% @subpages.each do |subpage| %>
       <h2><%= subpage.title%></h2>
+      <h4><%= subpage.url%></h4>
       <%= raw subpage.content%>
       </br></br>
    <% end %>
