--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,44 @@
+
+    <style type="text/css">
+    body {
+    	padding-top: 40px;
+    	padding-bottom: 40px;
+
+    }
+
+    .form-signin {
+    	max-width: 300px;
+    	padding: 19px 29px 29px;
+    	margin: 0 auto 20px;
+
+
+    	-webkit-border-radius: 5px;
+    	-moz-border-radius: 5px;
+    	border-radius: 5px;
+    	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    	box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    }
+    .form-signin .form-signin-heading,
+    .form-signin .checkbox {
+    	margin-bottom: 10px;
+    }
+    .form-signin input.email,
+    .form-signin input[type="password"] {
+    	font-size: 16px;
+    	height: 30px !important;
+        line-height: 30px !important;
+    	margin-bottom: 15px;
+    	padding: 7px 9px;
+    }
+
+    </style>
+
+
 <h2>Forgot your password?</h2>
+
+
+
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -6,7 +46,7 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><%= f.submit "Send me reset password instructions", :class => "btn btn-large btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
